# propka

./: .gitattributes  .gitignore  .pylintrc  INSTALL  LONG_DESCRIPTION.md  MANIFEST.in  MMCIF_TODO.md  README.md  propka.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
Source/: __init__.py  atom.py  bonds.py  calculations.py  conformation_container.py  coupled_groups.py  determinant.py  determinants.py  group.py  iterative.py  lib.py  ligand.py  ligand_pka_values.py  molecular_container.py  output.py  parameters.py  pdb.py  protonate.py  vector_algebra.py  version.py
Tests/: pkacalc_test.py  runtest.py
docs/: Makefile  requirements.txt
docs/source/: api.rst  changelog.rst  command.rst  conf.py  index.rst  installation.rst  quickstart.rst  references.rst
docs/source/_templates/autosummary/: module.rst
propka/: __init__.py  __main__.py  _version.py  atom.py  bonds.py  calculations.py  conformation_container.py  coupled_groups.py  determinant.py  determinants.py  energy.py  group.py  hybrid36.py  hydrogens.py  input.py  iterative.py  lib.py  ligand.py  ligand_pka_values.py  molecular_container.py  output.py  parameters.py  pdb.py  propka.cfg  protein_bonds.json  protonate.py  run.py  vector_algebra.py  version.py
scripts/: propka3.py  propka31.py  propka32.py
tests/: .gitignore  README.md  hybrid36.py  reproduce_3sgb_icode_results.sh  test_basic_regression.py  test_hybrid36.py  test_input.py  test_lib.py  test_molecular_container.py  test_protonate.py  test_run.py  test_streamio.py  test_vector_algebra.py  test_version.py
tests/results/: 1HPX.json
